<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Farejudge</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_data_prompt">Enter Data</string>
    <string name="is_connected_prompt">Are you connected?</string>
    <string name="name_prompt">Name</string>
    <string name="numberid_prompt">Number ID</string>
    <string name="establishment_type_prompt">Establishment Type</string>
    <string name="type_of_food_served_prompt">Type Of Food Served</string>
    <string name="location_prompt">Location</string>
    <string name="phone_number_prompt">Establishment Contact Details</string>
    <string name="next_command_prompt">Next</string>
    <string name="post_data_to_web_service_label">Post Data</string>
    <string name="name1_prompt">Name</string>
    <string name="datePicker2">Date Of Review</string>
    <string name="type_of_meal_prompt">Type Of Meal</string>
    <string name="over_all_rating_prompt">Over All Rating</string>
    <string name="cost_of_meal_prompt">Cost Of Meal</string>
    <string name="update_command_prompt">Save</string>
    <string name="review_command_prompt">Review</string>
    
     <!-- an string array to populate the spinner with data -->

        <string-array name="establishmenttype">
        <item>Bar</item>
        <item>Cafe</item>
        <item>Pub</item>
        <item>Resturant</item>
        </string-array>
        <string name="establishment_name1_prompt">Establishment Name</string>
        <string name="date_of_review1_prompt">Date Of Review</string>
        <string name="type_of_meal1_prompt">Type Of Meal</string>
        <string name="over_all_rating1_prompt">Over all Rating</string>
        <string name="cost_of_meal1_prompt">Cost Of Meal</string>
        <string name="next1_command_prompt">Next</string>
        <string name="list_of_records_prompt">List Of Records</string>
        <string name="list_review_prompt">Review list</string>
        <string name="record_search_byname_prompt">Record Search By Name</string>
        <string name="enter_details_for_farejudge_prompt">Enter Details For Farejudge</string>
        <string name="show_list_prompt">Show FareJudge List</string>
        <string name="enter_review_prompt">Enter Review Details</string>
        <string name="show_review_prompt">Show Review List</string>
        <string name="search_details_prompt">Search For FareJudge Details</string>
        <string name="delete_record_prompt">Delete All Records</string>
        <string name="delete_single_record_label_command">Delete Single Record</string>
        <string name="textview">TextView</string>
        <string name="linearlayout1">LinearLayout1</string>
       

</resources>
